# rust-enphase

./: .gitlab-ci.yml  Cargo.toml  build.rs
src/: cloud.rs  envoy.rs  lib.rs  model.rs
src/cloud/: connection_type.rs  granularity.rs  system.rs
src/envoy/: home.rs  info.rs  inventory.rs  inverters.rs  production.rs
src/envoy/home/testdata/: home.json
src/envoy/info/testdata/: info.xml
src/envoy/inventory/testdata/: single-device.json  whole-inventory-2.json  whole-inventory.json
src/envoy/inverters/testdata/: many-2.json  many.json  single.json
src/envoy/production/: ir.rs
src/envoy/production/testdata/: production-detail-2.json  production-detail.json
