[package]
name = "enphase"
version = "0.1.0"
edition = "2021"
description = "An async wrapper around the Enphase APIs - both direct local access to Envoy devices, and the Enlighten cloud service"
license = "MIT"
repository = "https://gitlab.cronce.io/foss/rust-enphase"
homepage = "https://docs.rs/enphase"
authors = ["Mike Cronce <mike@quadra-tec.net>"]

[features]
clap = ["dep:clap"]

[dependencies]
arcstr = "1.1.5"
base64 = "0.20"
clap = { version = "4.0.29", optional = true, features = ["derive", "env"] }
compact_str = { version = "0.6.1", features = ["serde"] }
diqwest = { version = "1.1.0", features = ["rustls-tls"] }
macaddr = { version = "1.0.1", features = ["serde_std"] }
oauth2 = "4.3.0"
parking_lot = "0.12.1"
reqwest = { version = "0.11.13", default-features = false, features = ["rustls-tls", "json", "gzip"] }
serde = { version = "1.0.148", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.89"
serde_with = { version = "2.1.0", features = ["time_0_3"] }
smallvec = { version = "1.10.0", features = ["const_generics", "serde", "union"] }
strum = { version = "0.24.1", features = ["derive"] }
thiserror = "1.0.37"
time = { version = "0.3.17", features = ["serde", "formatting", "macros"] }
tokio = { version = "1.22.0", features = ["sync"] }
url = "2.3.1"
uuid = { version = "1.2.2", features = ["serde"] }

[dev-dependencies]
clap = { version = "4.0.29", features = ["derive"] }
serde_json = "1.0.89"
tokio = { version = "1.22.0", features = ["rt", "macros"] }

