[package]
name = "enphase"
version = "0.3.2"
edition = "2021"
description = "An async wrapper around the Enphase APIs - both direct local access to Envoy devices, and the Enlighten cloud service"
license = "MIT"
repository = "https://gitlab.cronce.io/foss/rust-enphase"
homepage = "https://docs.rs/enphase"
authors = ["Mike Cronce <mike@quadra-tec.net>"]

[features]
clap = ["dep:clap"]

[dependencies]
arcstr = "1.1.5"
base64 = "0.21"
chrono = { version = "0.4.23", default-features = false, features = ["serde"] }
clap = { version = "4.0.29", optional = true, features = ["derive", "env"] }
compact_str = { version = "0.7.0", features = ["serde"] }
diqwest = { version = "1.1.0", features = ["rustls-tls"] }
macaddr = { version = "1.0.1", features = ["serde_std"] }
reqwest = { version = "0.11.13", default-features = false, features = ["rustls-tls", "json", "gzip"] }
serde = { version = "1.0.148", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.89"
serde_with = { version = "3.0.0", features = ["chrono_0_4"] }
smallvec = { version = "1.10.0", features = ["const_generics", "serde", "union"] }
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.37"
tokio = { version = "1.22.0", features = ["sync"] }
url = "2.3.1"

[dev-dependencies]
clap = { version = "4.0.29", features = ["derive"] }
serde_json = "1.0.89"
tokio = { version = "1.22.0", features = ["rt", "macros"] }

